gccida/c0/initialize_argument_information
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_argument_information/src/calls.c:1587:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_argument_information/src/calls.c:1588:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_argument_information/src/calls.c:1591:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tree; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_argument_information/src/calls.c:1592:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v17; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_argument_information/src/calls.c:1598:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v23; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_argument_information/src/calls.c:1599:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v24; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_argument_information/src/calls.c:1600:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *arg0; // [rsp+20h] [rbp-E0h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_argument_information/src/calls.c:1603:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v28; // [rsp+50h] [rbp-B0h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_argument_information/src/calls.c:1604:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *inc_0; // [rsp+68h] [rbp-98h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_argument_information/src/calls.c:1608:5: error: expected ';' after expression
tree type; // [rsp+88h] [rbp-78h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_argument_information/src/calls.c:1608:6: error: use of undeclared identifier 'type'
tree type; // [rsp+88h] [rbp-78h] 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_argument_information/src/calls.c:1609:5: error: expected ';' after expression
tree p; // [rsp+90h] [rbp-70h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_argument_information/src/calls.c:1609:6: error: use of undeclared identifier 'p'
tree p; // [rsp+90h] [rbp-70h] 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_argument_information/src/calls.c:1614:5: error: expected ';' after expression
tree fndecla; // [rsp+B8h] [rbp-48h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_argument_information/src/calls.c:1614:6: error: use of undeclared identifier 'fndecla'; did you mean 'fndecl'?
tree fndecla; // [rsp+B8h] [rbp-48h] 
     ^~~~~~~
     fndecl
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_argument_information/src/calls.c:1579:6: note: 'fndecl' declared here
tree fndecl, 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_argument_information/src/calls.c:1615:5: error: expected ';' after expression
tree actparmsa; // [rsp+C0h] [rbp-40h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_argument_information/src/calls.c:1615:6: error: use of undeclared identifier 'actparmsa'; did you mean 'actparms'?
tree actparmsa; // [rsp+C0h] [rbp-40h] 
     ^~~~~~~~~
     actparms
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_argument_information/src/calls.c:1578:6: note: 'actparms' declared here
tree actparms, 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_argument_information/src/calls.c:1625:1: error: use of undeclared identifier 'actparmsa'; did you mean 'actparms'?
actparmsa = actparms; 
^~~~~~~~~
actparms
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_argument_information/src/calls.c:1578:6: note: 'actparms' declared here
tree actparms, 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_argument_information/src/calls.c:1626:1: error: use of undeclared identifier 'fndecla'; did you mean 'fndecl'?
fndecla = fndecl; 
^~~~~~~
fndecl
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_argument_information/src/calls.c:1579:6: note: 'fndecl' declared here
tree fndecl, 
     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initialize_argument_information/src/obj/calls.o] Error 1
